--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Demon Images 🐻</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of <strong>tanjiro</strong> demon, <strong>nezuko</strong> demon, <strong>zenitsu</strong> demon, <strong>inosuke</strong> demon, or
+      all four!
     </p>
     <div class='content'>
       <div class='no-display'>
